# bard_engine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
engine/: CMakeLists.txt
engine/bard/: CMakeLists.txt  bard.h
engine/bard/src/: test.cpp  test.h
engine/src/: CMakeLists.txt  Engine.h
engine/src/bard/: Application.cpp  Application.h  EntryPoint.h
engine/src/bard/auxiliary/: Expected.h  FileIO.cpp  FileIO.h  Profiler.h  SFINAE.h  Singleton.h
engine/src/bard/core/: Application.cpp  Application.h  Base.h  EntryPoint.h  Input.h  KeyCodes.h  Layer.h  LayerStack.cpp  LayerStack.h  MouseCodes.h  WindowInterface.h
engine/src/bard/core/imgui/: ImGuiLayer.cpp  ImGuiLayer.h
engine/src/bard/core/logging/: Logger.cpp  Logger.h
engine/src/bard/core/utils/: SFINAE.h  Singleton.h  Singletone.h  Timestep.h  Utils.h
engine/src/bard/events/: ApplicationEvent.h  Buss.h  Event.h  KeyEvent.h  Manager.h  MouseEvent.h  Types.h
engine/src/bard/renderer/: Buffer.cpp  Buffer.h  GraphicsContext.h  RenderCommand.cpp  RenderCommand.h  Renderer.cpp  Renderer.h  RendererAPI.cpp  RendererAPI.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h
engine/src/bard/renderer/2D/: Renderer.cpp  Renderer.h
engine/src/bard/renderer/buffer/: Buffer.cpp  Buffer.h  Element.h  Layout.h
engine/src/bard/renderer/camera/: Controller.cpp  Controller.h  OrthographicCamera.cpp  OrthographicCamera.h  OrthographicController.cpp
engine/src/platform/linux/: Input.cpp  Window.cpp  Window.h
engine/src/platform/openGL/: Buffer.cpp  Buffer.h  Context.cpp  Context.h  ImguiOpenGl_Renderer.cpp  ImguiOpenGl_Renderer.h  OpenGlBuffer.cpp  OpenGlBuffer.h  OpenGlContext.cpp  OpenGlContext.h  RendererAPI.cpp  RendererAPI.h  Shader.cpp  Shader.h  Texture2D.cpp  Texture2D.h  VertexArray.cpp  VertexArray.h
engine/src/platform/openGL/parsers/: ShaderParser.cpp  ShaderParser.h
sandbox/: CMakeLists.txt  ExampleLayer.cpp  ExampleLayer.h  Sandbox.cpp  Sandbox2D.cpp  Sandbox2D.h  main.cpp
sandbox/assets/shaders/: FlatColor.glsl  FlatColor2.glsl  Texture.glsl  Triangle.glsl
